--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -1,2 +1,3 @@
 ---
 default: --tag ~@pending --tag ~@wip
+parallel: --format progress --format ParallelTests::Cucumber::FailuresLogger --out tmp/cucumber_failures.log
