--- a/features/support/config/qc.yaml
+++ b/features/support/config/qc.yaml
@@ -64,7 +64,7 @@ accounts:
       bounce_address_two: 'qc-email_end_to_end-errors2@govdelivery.com'
     gmail:
       imap:
-        user_name: 'canari4dd+1@gmail.com'
+        user_name: 'govdelnew4@gmail.com'
   sms_keyword_commands_stop:
     xact:
       account_id: '10542'
