--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "repository": "git@dev-scm.office.gdi:development/xact.git",
   "author": "Team Pigeon <pigeon@govdelivery.com>",
   "dependencies": {
-    "react": "^15.4.2"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -15,14 +16,18 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
+    "cheerio": "^0.22.0",
+    "enzyme": "^2.7.1",
     "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.2",
     "sinon": "^1.17.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
     "babel": "babel main.js -o build/main.bundle.js",
-    "server": "webpack-dev-server --hot"
+    "server": "webpack-dev-server --hot",
     "webpack": "webpack",
     "build": "webpack -p"
   }
