--- a/client/package.json
+++ b/client/package.json
@@ -7,26 +7,30 @@
   "author": "Team Pigeon <pigeon@govdelivery.com>",
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "cheerio": "^0.22.0",
     "enzyme": "^2.7.1",
     "mocha": "^3.2.0",
     "react-addons-test-utils": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
     "sinon": "^1.17.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
-    "babel": "babel main.js -o build/main.bundle.js",
+    "babel": "babel app/main.js -o public/main.public.js",
     "server": "webpack-dev-server --hot",
     "webpack": "webpack",
     "build": "webpack -p"
