--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "repository": "git@dev-scm.office.gdi:development/xact.git",
   "author": "Team Pigeon <pigeon@govdelivery.com>",
   "dependencies": {
+    "axios": "^0.15.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "redux": "^3.6.0"
@@ -31,7 +32,7 @@
   },
   "scripts": {
     "babel": "babel app/main.js -o public/main.public.js",
-    "server": "webpack-dev-server --hot",
+    "server": "webpack-dev-server",
     "webpack": "webpack",
     "build": "webpack -p"
   }
