--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "axios": "^0.15.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "shamrock": "git+ssh://git@dev-scm.office.gdi:development/shamrock.git#13.0.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
