--- a/client/package.json
+++ b/client/package.json
@@ -23,11 +23,16 @@
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "cheerio": "^0.22.0",
+    "css-loader": "^0.27.3",
     "enzyme": "^2.7.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "mocha": "^3.2.0",
+    "node-sass": "^4.5.0",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "sass-loader": "^6.0.3",
     "sinon": "^1.17.7",
+    "style-loader": "^0.14.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
