--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "redux": "^3.6.0",
-    "shamrock": "git+ssh://git@dev-scm.office.gdi:development/shamrock.git#13.0.0"
+    "shamrock": "git+http://git:@dev-scm.office.gdi/development/shamrock.git#v16.1.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
