--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.15.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "shamrock": "git+http://git:@dev-scm.office.gdi/development/shamrock.git#v16.1.2"
   },
@@ -43,7 +44,7 @@
     "build": "webpack -p",
     "lint:scripts": "eslint src/scripts test/scripts test",
     "mocha": "mocha --compilers js:babel-register --recursive test",
-    "server": "webpack-dev-server",
+    "server": "webpack-dev-server --output-public-path=/public/ --hot",
     "webpack": "webpack"
   }
 }
