XACT-1067: Misc updates
- Updated ci job to lint app as well as tests
- Updated main to reference store
- Added support for the redux debugging tools

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,7 @@
   before_script:
     - cd client
     - nvm use
-    - npm install npm
-    - npm install --global yarn
+    - (yarn --version || npm install --global yarn)
     - yarn install
 
 # Jobs:
@@ -49,8 +48,8 @@ mocha:
   script:
     - yarn test
 
-scripts_lint:
+eslint:
   <<: *javascript_job
   script:
-    - yarn run lint:scripts
+    - yarn lint
 
