--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "shamrock": "git+http://git:@dev-scm.office.gdi/development/shamrock.git#v16.1.2"
   },
   "devDependencies": {
