--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "5.0.0-alpha.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "shamrock": "git+http://git:@dev-scm.office.gdi/development/shamrock.git#v16.1.2"
